Bug 474739. Handle zero-duration intervals properly in SMIL. r=roc